--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN AVOID THE BOMB</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">8 minutes ago</div>
+                        <div class="date">23 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Exposing the Biggest Trading Scam: Fake Journals vs. Real Myfxbook Audits</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Only The Now Is Real | Eckhart Tolle on the Paradox of Time (Part 1)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Why the Stock Market Is Like a Lottery?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Exploring the Power of Will</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>Enlightenment – A Vision Beyond Light & Darkness | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -2600,9 +2600,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=nMC2CbccYt0" target="_blank">
-                    <img src="https://i.ytimg.com/vi/nMC2CbccYt0/mqdefault.jpg" alt="This Drill Will Turn ANYBODY into a Scratch Golfer (Do 3 Mins a Day)">
+                    <img src="https://i.ytimg.com/vi/nMC2CbccYt0/mqdefault.jpg" alt="Do this 3 minutes a day to become a scratch golfer?!">
                     <div class="video-info">
-                        <h3>This Drill Will Turn ANYBODY into a Scratch Golfer (Do 3 Mins a Day)</h3>
+                        <h3>Do this 3 minutes a day to become a scratch golfer?!</h3>
                         <div class="channel">SagutoGolf</div>
                         <div class="date">Aug 11, 2025</div>
                     </div>
@@ -5085,7 +5085,7 @@
                         <div class="video-info">
                             <h3>Exposing the Biggest Trading Scam: Fake Journals vs. Real Myfxbook Audits</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5096,7 +5096,7 @@
                         <div class="video-info">
                             <h3>Why the Stock Market Is Like a Lottery?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7253,7 +7253,7 @@
                         <div class="video-info">
                             <h3>Only The Now Is Real | Eckhart Tolle on the Paradox of Time (Part 1)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7286,7 +7286,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Exploring the Power of Will</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7297,7 +7297,7 @@
                         <div class="video-info">
                             <h3>Enlightenment – A Vision Beyond Light & Darkness | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9533,9 +9533,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=nMC2CbccYt0" target="_blank">
-                        <img src="https://i.ytimg.com/vi/nMC2CbccYt0/mqdefault.jpg" alt="This Drill Will Turn ANYBODY into a Scratch Golfer (Do 3 Mins a Day)">
+                        <img src="https://i.ytimg.com/vi/nMC2CbccYt0/mqdefault.jpg" alt="Do this 3 minutes a day to become a scratch golfer?!">
                         <div class="video-info">
-                            <h3>This Drill Will Turn ANYBODY into a Scratch Golfer (Do 3 Mins a Day)</h3>
+                            <h3>Do this 3 minutes a day to become a scratch golfer?!</h3>
                             <div class="channel">SagutoGolf</div>
                             <div class="date">Aug 11, 2025</div>
                         </div>
@@ -9576,7 +9576,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN AVOID THE BOMB</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">8 minutes ago</div>
+                            <div class="date">23 minutes ago</div>
                         </div>
                     </a>
                 </div>
