--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN AVOID THE BOMB</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">23 minutes ago</div>
+                        <div class="date">38 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Sadhguru's Enlightenment Day Satsang – LIVE on 23 September | 7:30 PM IST | 10 AM EDT | 3 PM BST</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>FIX THIS FIRST and your entire swing falls in place (most never realize this)</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Is Attachment a Problem in Relationships? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -2230,7 +2230,7 @@
                     <div class="video-info">
                         <h3>Vikkstar @ Reading Festival 🤯</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Aug 24, 2025</div>
                     </div>
                 </a>
             </div>
@@ -2600,9 +2600,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=nMC2CbccYt0" target="_blank">
-                    <img src="https://i.ytimg.com/vi/nMC2CbccYt0/mqdefault.jpg" alt="Do this 3 minutes a day to become a scratch golfer?!">
+                    <img src="https://i.ytimg.com/vi/nMC2CbccYt0/mqdefault.jpg" alt="This Drill Will Turn ANYBODY into a Scratch Golfer (Do 3 Mins a Day)">
                     <div class="video-info">
-                        <h3>Do this 3 minutes a day to become a scratch golfer?!</h3>
+                        <h3>This Drill Will Turn ANYBODY into a Scratch Golfer (Do 3 Mins a Day)</h3>
                         <div class="channel">SagutoGolf</div>
                         <div class="date">Aug 11, 2025</div>
                     </div>
@@ -7242,7 +7242,7 @@
                         <div class="video-info">
                             <h3>Sadhguru's Enlightenment Day Satsang – LIVE on 23 September | 7:30 PM IST | 10 AM EDT | 3 PM BST</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7264,7 +7264,7 @@
                         <div class="video-info">
                             <h3>Is Attachment a Problem in Relationships? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9405,7 +9405,7 @@
                         <div class="video-info">
                             <h3>FIX THIS FIRST and your entire swing falls in place (most never realize this)</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9533,9 +9533,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=nMC2CbccYt0" target="_blank">
-                        <img src="https://i.ytimg.com/vi/nMC2CbccYt0/mqdefault.jpg" alt="Do this 3 minutes a day to become a scratch golfer?!">
+                        <img src="https://i.ytimg.com/vi/nMC2CbccYt0/mqdefault.jpg" alt="This Drill Will Turn ANYBODY into a Scratch Golfer (Do 3 Mins a Day)">
                         <div class="video-info">
-                            <h3>Do this 3 minutes a day to become a scratch golfer?!</h3>
+                            <h3>This Drill Will Turn ANYBODY into a Scratch Golfer (Do 3 Mins a Day)</h3>
                             <div class="channel">SagutoGolf</div>
                             <div class="date">Aug 11, 2025</div>
                         </div>
@@ -9576,7 +9576,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN AVOID THE BOMB</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">23 minutes ago</div>
+                            <div class="date">38 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -9730,7 +9730,7 @@
                         <div class="video-info">
                             <h3>Vikkstar @ Reading Festival 🤯</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Aug 24, 2025</div>
                         </div>
                     </a>
                 </div>
