--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Vikkstar, Tobi & Behz on GUMBALL Rally</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Sadhguru's Enlightenment Day Satsang – LIVE on 23 September | 7:30 PM IST | 10 AM EDT | 3 PM BST</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>FIX THIS FIRST and your entire swing falls in place (most never realize this)</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Is Attachment a Problem in Relationships? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>How To Trade Like A Casino</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>Backtesting Length: What Is Sufficient For Your Strategy? #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -376,7 +376,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: Strategy Development with Edgewonk - 23.09.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5118,7 +5118,7 @@
                         <div class="video-info">
                             <h3>How To Trade Like A Casino</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5129,7 +5129,7 @@
                         <div class="video-info">
                             <h3>Backtesting Length: What Is Sufficient For Your Strategy? #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5173,7 +5173,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: Strategy Development with Edgewonk - 23.09.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7264,7 +7264,7 @@
                         <div class="video-info">
                             <h3>Sadhguru's Enlightenment Day Satsang – LIVE on 23 September | 7:30 PM IST | 10 AM EDT | 3 PM BST</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7286,7 +7286,7 @@
                         <div class="video-info">
                             <h3>Is Attachment a Problem in Relationships? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9405,7 +9405,7 @@
                         <div class="video-info">
                             <h3>FIX THIS FIRST and your entire swing falls in place (most never realize this)</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9587,7 +9587,7 @@
                         <div class="video-info">
                             <h3>Vikkstar, Tobi & Behz on GUMBALL Rally</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
